# kb-factory

./: .gitattributes  .gitignore  .kb-factory-public-export.json  ACKNOWLEDGMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json
.githooks/: pre-commit
.github/: pull_request_template.md
core/: README.md
docs/: README.md  agent-sessions.md  architecture.md  commands.md  comparison.md  concepts.md  development.md  getting-started.md  installation.md  merit-evaluation.md  plugins.md  provenance-and-continuity.md  releasing.md  troubleshooting.md  use-cases.md
kb_factory/: __init__.py  cli.py
tests/: README.md  test_agent_command_surfaces.py  test_agent_package_organization.py  test_analyses.py  test_build_agent_packages.py  test_filing.py  test_filing_suggestions.py  test_graph_schema_and_links.py  test_integrity.py  test_kb_next_bootstrap.py  test_kb_wiki_vnext_graph_runtime.py  test_kb_wiki_vnext_runtime.py  test_kb_wiki_vnext_semantic_runtime.py  test_oplog.py  test_oplog_standalone.py  test_packaging.py  test_provenance.py  test_release_bundle.py  test_release_version_matrix.py  test_sources.py  test_summaries.py  test_vnext_pip_channel.py  test_vnext_public_packaging.py  test_vnext_runtime_parity.py  test_vnext_runtime_shipping.py  test_wiki_graph_surfaces.py  test_wiki_hermetic.py  test_wiki_self_clean.py
tools/: audit_agent_command_surfaces.py  build_agent_packages.py  build_release_bundle.py  build_vnext_standalone.py  gate.py  (+6 more)
(+117 files in other folders)
